# pdf-organizer

./: .gitignore  LICENSE  README.md  pyproject.toml
pdf-organizer-frontend/: package-lock.json  package.json  tailwind.config.ts  types.ts
pdf-organizer-frontend/src/app/: globals.css  layout.tsx  page.tsx
pdf-organizer-frontend/src/app/api/: route.tsx
pdf-organizer-frontend/src/app/api/pdf-metadata/: route.ts
pdf-organizer-frontend/src/app/components/: Navbar.jsx  RowData.tsx  RowList.tsx
pdf-organizer-frontend/src/app/search/: page.tsx
pdf-organizer-frontend/src/components/: Button.tsx  DataBody.tsx  DataHeader.tsx  DisplayData.tsx  Header.tsx  SearchInput.tsx  TopButton.tsx  useFetch.tsx
pdf-organizer-frontend/src/lib/: db.ts  db.tsx
pdf-organizer-frontend/src/types/: types.ts
pdf_organizer/: main.py
pdf_organizer/src/: metadata.py  organize.py
tests/: test_metadata.py  test_organize.py
