[tool.poetry]
name = "pdf-organizer"
version = "0.1.0"
description = ""
authors = ["ChrisRBe <chrisrbe@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
pdf-organizer = "pdf_organizer.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}
pypdf = "^4.3.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
