[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.poetry]
name = "pdf-organizer"
version = "0.8.0"
description = ""
authors = ["ChrisRBe <chrisrbe@outlook.com>"]
readme = "README.md"

[tool.poetry.scripts]
pdf-organizer = "pdf_organizer.main:app"

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.3"}
pypdf = "^4.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
inline-snapshot = "^0.12.0"

[tool.pytest.ini_options]
addopts = "--cov=pdf_organizer --cov-report html"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = ["B"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
